# Glean

./: .dockerignore  .gitignore  .hlint.yaml  01a85c17.9e61f426.js  01a85c17.ec992d9b.js  031793e1.76bf8b2c.js  06841d4f.1e6639b3.js  06841d4f.79efa7d2.js  06841d4f.8398f862.js  06841d4f.cbd05114.js  0b852be5.29d2b379.js  0b852be5.5aec20ea.js  0b852be5.a37a3497.js  0b852be5.c81dff9e.js  1.59982928.js  1.8bb08397.js  17896441.6e417407.js  1be78505.126bd22c.js  1be78505.65acd90e.js  2.1e10b26e.js  2.5fa3e0ee.js  215c17ac.808ad150.js  215c17ac.9f2b1b0a.js  215c17ac.ceb4901a.js  215c17ac.e0daee8c.js  3.88208a2f.js  30a24c52.5a731920.js  30a24c52.d25e6d87.js  31ccc7a2.42971d01.js  31ccc7a2.4cd627fa.js  31ccc7a2.a2fe9ab3.js  31ccc7a2.e91a331d.js  31ccc7a2.efa33a82.js  3a62bff6.2b3c6703.js  3a62bff6.4be436fc.js  3a62bff6.d398d3ee.js  3a62bff6.f21d8fdf.js  404.html  4483ff09.3a323ed7.js  4483ff09.80b2c966.js  (+405 more)
glean/lang/clang/: Derive.hs  LICENSE  Setup.hs  action.cpp  action.h  ast.cpp  ast.h  common.h  db.cpp  db.h  glean-clang.cabal  gleandiagnosticbuffer.h  hash.cpp  hash.h  index.cpp  index.h  path.cpp  path.h  preprocessor.cpp  preprocessor.h
glean/lang/clang/Derive/: Common.hs  CxxDeclarationSources.hs  CxxDeclarationTargets.hs  CxxSame.hs  CxxTargetUses.hs  Env.hs  Generic.hs  Lib.hs  Types.hs
glean/lang/clang/Glean/Indexer/: Cpp.hs
glean/lang/clang/exe/Glean/: CMake.hs  Clang.hs
glean/lang/clang/hash/: Setup.hs  glean-hash.cabal  hash.cpp  hash.h
glean/lang/clang/tests/: PathTest.cpp  schema_gen_test.sh
glean/lang/clang/tests/Glean/Clang/: Test.hs
glean/lang/clang/tests/Glean/Clang/Test/: DerivePass.hs  DocBlock.hs
glean/lang/clang/tests/Glean/Regression/Driver/: Clang.hs  DeriveDeclByName.hs  DeriveDeclFamilies.hs  DeriveForCodemarkup.hs  DeriveFunctionCalls.hs  DeriveFunctionDeclAttribute.hs  DeriveObjcInheritance.hs  DocBlock.hs
glean/lang/clang/tests/github/Glean/Clang/: CodeMarkup.hs  DeriveAttrs.hs  DeriveByName.hs  DeriveFamilies.hs  DeriveFunCalls.hs  DeriveObjCInheritance.hs  DocBlock.hs  Regression.hs
glean/lang/clang/tests/incremental/: IncrementalTest.hs  cxx1.DeclToFamily.query  xrefs.query
glean/lang/clang/tests/incremental/src/: CxxEntityDocumentation_decl.out  CxxEntityDocumentation_decl.query  DeclarationComment.out  DeclarationComment.query  EntityDocAttr.out  a.h  b.cpp  cxx1.DeclByName.out  cxx1.DeclByName.query  cxx1.DeclFamily.out  cxx1.DeclFamily.query  cxx1.DeclToFamily.out  cxx1.TargetUses.out  cxx1.TargetUses.query  xrefs.out
glean/lang/clang/tests/incremental/src/old/: a.cpp  a.h  b.cpp
glean/lang/clang/tests/regression/attributes/: attributes.query
glean/lang/clang/tests/regression/attributes/fun_attr/: attributes.out  test.cpp
glean/lang/clang/tests/regression/codemarkup/: CxxFileEntityTraceVariableXRefDeclLocations.query  CxxFileEntityTraceVariableXRefDeclToDefs.query  CxxFileEntityXMapVariableXRefDeclLocations.query  decltodeftodecl.query  fileentitykind.query
glean/lang/clang/tests/regression/codemarkup/macro1/: CxxFileEntityXMapFixedXRefLocations.out  cxxfileentitytraceppxreflocations.out  cxxfileentitytracevariablexreflocations.out  declarationlocation.out  decltodeftodecl.out  fileentities.out  fileentitykind.out  fileentitytracelocations.out  fileentityxrefkind.out  fileentityxrefs.out  filexrefmap.out  searchbyname.out  test.cpp
glean/lang/clang/tests/regression/codemarkup/member1/: CxxFileEntityXMapFixedXRefLocations.out  cxxfileentitytracevariablexreflocations.out  declarationlocation.out  decltodeftodecl.out  fileentities.out  fileentityinfo.out  fileentitykind.out  fileentitytracelocations.out  (+5 more)
glean/lang/clang/tests/regression/declarations/: declarationlocation.query  declarations.query  digest.query
glean/lang/clang/tests/regression/gencode_idl/: CxxToThrift.out  test.cpp
glean/lang/clang/tests/regression/index_failure/: index_failure.query
glean/lang/clang/tests/regression/language/: language.query
glean/lang/clang/tests/regression/mangled-name-hash/: mangled-name-hash.query
glean/lang/clang/tests/regression/namespace_definitions/: namespace_definitions.out  namespace_definitions.query  test.cpp
glean/lang/clang/tests/regression/objc_definitions/: objcontainer_definitions.query
glean/lang/clang/tests/regression/preprocessor/: define_use.query  trace.query
glean/lang/clang/tests/regression/record_definitions/: record_definitions.query
glean/lang/clang/tests/regression/specialization/: cxx1.SpecializationOf.query
glean/lang/clang/tests/regression/usr-hash/: usr-hash.query
glean/lang/clang/tests/regression_derive-attributes/: attributes.query  codemarkup_cxx_annotation.query  functiondeclattribute.query
glean/lang/clang/tests/regression_derive-attributes/fun_attr/: attributes.out  attributes.perf  codemarkup_cxx_annotation.out  codemarkup_cxx_annotation.perf  functiondeclattribute.out  functiondeclattribute.perf  test.cpp
glean/lang/clang/tests/regression_derive-decl-by-name/declarations/: cxx1.DeclByName.query
glean/lang/clang/tests/regression_derive-decl-families/: cxx1.Same.query
glean/lang/clang/tests/regression_derive-function-calls/simple/: cxx1.DeclarationSources.query  cxx1.DeclarationTargets.query
glean/lang/clang/tests/regression_derive-objc-inheritance/simple/: cxx1.ObjcContainerInheritance.query
glean/lang/clang/tests/regression_docblock/declarations/: CxxToThrift.query  EntityDocAttr.query
glean/lang/clang/tests/regression_docblock/docmarkups/: LionizerInit.query
glean/lang/clang/tests/regression_extern-c/: externcdeclaration.query
glean/lang/clang/tests/regression_extern-c/extern_c/: externcdeclaration.out  externcdeclaration.perf  test.cpp
glean/lang/clang/tests/smoke-xlang/: smoke.thrift  test.cpp
glean/lang/scip/indexer/scip_to_glean/cli/: Cargo.toml  build.rs
glean/lang/scip/indexer/scip_to_glean/scip_symbol_parse/: Cargo.toml  README.md  test.sh
glean/lmdb-clib/: lmdb-clib.cabal  lmdb.h  mdb.c  midl.c  midl.h
glean/lsp/: CHANGELOG.md  LICENSE  README.md  glean-lsp.cabal
glean/lsp/Data/: ConcurrentCache.hs  Path.hs
glean/lsp/Glean/: LSP.hs
(+11148 files in other folders)
